# ds_lessons

./: module_1_homework.ipynb
1_pandas/: 1_pandas.ipynb
module_7/Task_1/circle_segmentation/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  train_log.json
module_7/Task_1/circle_segmentation/mlruns/0/: meta.yaml
module_7/Task_1/circle_segmentation/mlruns/865732887973079398/: meta.yaml
module_7/Task_1/circle_segmentation/mlruns/865732887973079398/0c08a031ba644cfda359afe2ed228d58/: meta.yaml
module_7/Task_1/circle_segmentation/mlruns/865732887973079398/7387380287ae465ea04cd979dfc93f30/: meta.yaml
module_7/Task_1/circle_segmentation/mlruns/865732887973079398/78bcc855fbd947faa2be65da2b0bab74/: meta.yaml
module_7/Task_1/circle_segmentation/mlruns/865732887973079398/e56e7dff651748e6a811d7a80a012c8a/: meta.yaml
module_7/Task_1/circle_segmentation/src/: app.py  train.py  train_log.json
module_7/Task_1/circle_segmentation/src/api/: main.py
module_7/Task_1/circle_segmentation/src/data/: dataset.py  provider.py
module_7/Task_1/circle_segmentation/src/mlruns/0/: meta.yaml
module_7/Task_1/circle_segmentation/src/models/: unet.py
module_7/Task_1/circle_segmentation/src/utils/: metrics.py
style-transfer/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh
style-transfer/src/style_transfer/: app.py  fast_model.py  model.py  perceptual_loss.py  run.py  train_fast.py  train_gatys.py  utils.py
style-transfer/src/style_transfer/api/: main.py  routes.py
style-transfer/src/style_transfer/services/: stylization.py
(+146 files in other folders)
